fixed overflow for modal in company and also height for profile

--- a/css/company.css
+++ b/css/company.css
@@ -107,7 +107,7 @@ section {
   border-radius: 5px;
   color: #9fa5b5;
   position: absolute;
-  top: 138px;
+  top: 142px;
   width: 8rem;
   opacity: 0;
   display: none;
@@ -144,7 +144,7 @@ section {
   box-shadow: 0 4px 8px 0 rgba(251, 246, 246, 0.354),
     0 6px 20px 0 rgba(252, 249, 249, 0.19);
   width: 40%;
-  height: 12rem;
+  height: 13.5rem;
   margin: 12px;
   align-self: center;
 }
@@ -160,12 +160,9 @@ h4 {
   border-radius: 10px;
   width: 80%;
   text-align: center;
-  margin: 10px 0 0 0;
+  margin-top: 4px;
 }
 
-p {
-  margin: 2px 0 0 0;
-}
 
 .read-more {
   border: none;
@@ -190,6 +187,7 @@ p {
   height: 75%;
   width: 500px;
   max-width: 80%;
+  overflow: scroll;
 }
 
 .modal.active {
